--- a/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
@@ -26,7 +26,7 @@
 		</div>
 
 		<div style="margin-top: 20px;">
-			<label style="margin-bottom: 10px;">Fecha Termina:</label>
+			<label style="margin-bottom: 10px;">Fecha Termina:</label><br/>
 			<label style="margin-bottom: 10px;">@bundle.FechaTermina.ToString("yyyy-MM-ddTHH:mm:ss")</label>
 			<input type="datetime-local" @onchange="@(e => CambiarFecha(e))" class="entrada-texto" style="width: 33%; min-width: 100px;" value="@bundle.FechaTermina.ToString("yyyy-MM-ddTHH:mm:ss")">
 		</div>
