--- a/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
@@ -35,7 +35,7 @@
 	<div class="perfil">
 		<div class="perfil-flexible-centrado">
 			<div style="width: 25%;">
-				<button @onclick="@(e => ClickearTienda(e, "divisas"))" class="boton-pequeño" style="text-align: center;">Actualizar</button>
+				<button @onclick="@(e => ClickearTienda(e, "correos"))" class="boton-pequeño" style="text-align: center;">Actualizar</button>
 			</div>
 			<div style="width: 75%; padding-left: 20px;">
 				<div class="admin-tiempohace">@Herramientas.Divisas.Mensaje()</div>
@@ -71,6 +71,11 @@
 			if (id == "codigos")
 			{
 				// Herramientas.Buscador.ActualizarCodigos();
+			}
+
+			if (id == "correos")
+			{
+				Herramientas.Correos test = new Herramientas.Correos();
 			}
 		}
 	}
