--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -157,8 +157,8 @@
 					<div class="perfil-flexible-centrado" style="margin-top: 15px;">
 						<a class="boton-pequeño" style="padding: 1px;" href="/news/@noticia.IdMaestra">
 							<div class="perfil-flexible-centrado">
-								<div style="width: 40%; height: 135px;">
-									<img src="/imagenes/noticias/@noticia.IdMaestra.ToString()/header.webp" style="max-width: 100%; max-height: 100%;" />
+								<div style="width: 40%;">
+									<img src="/imagenes/noticias/@noticia.IdMaestra.ToString()/header.webp" style="width: 100%; height: 100%; object-fit: contain;" />
 								</div>
 
 								<div style="width: 60%; padding: 20px;">
