--- a/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
@@ -75,7 +75,7 @@
 
 			if (id == "correos")
 			{
-				// Herramientas.Correos test = new Herramientas.Correos();
+				Herramientas.Correos.Enviar("admin@pepeizqdeals.com", "pepeizq@msn.com", "mail.pepeizqdeals.com", "");
 			}
 		}
 	}
